fix error merge